// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxySpy deep returns spied values 1`] = `
EffectsLog [
  mockName.foo,
  mockName.foo(
  ),
]
`;

exports[`proxySpy deep supports Symbols 1`] = `
EffectsLog [
  mockName[Symbol(foo)],
  mockName.Symbol(foo)[Symbol(bar)],
]
`;

exports[`proxySpy methods apply/call 1`] = `
EffectsLog [
  mockName(
    1,
    2,
    3,
  ),
]
`;

exports[`proxySpy methods apply/method 1`] = `
EffectsLog [
  mockName.apply(
    Object {
      "method1": [Function],
    },
    [
      1,
      2,
      3,
    ]
  ),
]
`;

exports[`proxySpy methods get 1`] = `
EffectsLog [
  mockName.property1,
]
`;

exports[`proxySpy methods set 1`] = `
EffectsLog [
  mockName.property1 =
    1,
]
`;

exports[`serializeWithSpies is ok with circular structures 1`] = `
Object {
  "obj1": [Circular],
  "obj2": [Circular],
}
`;

exports[`serializeWithSpies is ok with circular structures 2`] = `
Object {
  "obj1": Object {
    "obj1": [Circular],
  },
  "obj2": Object {
    "obj2": [Circular],
  },
}
`;

exports[`serializeWithSpies stringifies spies 1`] = `Object {}`;

exports[`serializeWithSpies stringifies spies 2`] = `
Array [
  Object {},
  Object {},
]
`;
